--- a/EaApplicationTestNunit/EaApplicationTestNunit.csproj
+++ b/EaApplicationTestNunit/EaApplicationTestNunit.csproj
@@ -18,6 +18,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Selenium.Support" Version="4.15.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.15.0" />
   </ItemGroup>
 
